--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "@supabase/supabase-js": "^2.27.0"
+    "@supabase/supabase-js": "^2.27.0",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "typescript": "^5.4.5",
